# market-hyperfeed

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  ClickHouseDDL.sql  NOTICE  README.md  SECURITY.md  config.example.toml  docker-compose.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
docs/advanced/: backfill-vendor-credentials.md
scripts/: fixture_smoke.sh  gitleaks_scan.sh  public_secret_scan.sh  quickstart_smoke.sh  readme_sanity.py
src/: main.rs
