[package]
name = "market-hyperfeed"
version = "0.1.0-alpha.1"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/sggmaker/market-hyperfeed"
homepage = "https://github.com/sggmaker/market-hyperfeed"
readme = "README.md"
description = "Rust-based crypto market data pipeline with public WebSocket ingest, WAL durability, and ClickHouse quickstart."
keywords = ["crypto", "market-data", "websocket", "clickhouse", "wal"]
categories = ["command-line-utilities"]
publish = false

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["fs", "io-util", "macros", "rt-multi-thread", "time"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "handshake", "rustls-tls-webpki-roots"] }
toml = "0.8"
